--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@mantine/core": "^^6.0.21",
     "@mantine/hooks": "^6.0.21",
     "@mantine/next": "^6.0.21",
+    "@mantine/notifications": "^6.0.21",
+    "formik": "^2.4.5",
+    "nanoid": "^5.0.6",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
