--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "@emotion/server": "^11.11.0",
     "@mantine/core": "^^6.0.21",
     "@mantine/hooks": "^6.0.21",
+    "@mantine/dates": "^6.0.20",
     "@mantine/next": "^6.0.21",
     "@mantine/notifications": "^6.0.21",
+    "mantine-react-table": "^1.3.4",
+    "@tabler/icons": "^1.82.0",
+    "dayjs": "^1.11.5",
+    "@tabler/icons-react": "^2.47.0",
     "formik": "^2.4.5",
     "nanoid": "^5.0.6",
     "next": "14.1.0",
